visual fix for right hand margin
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2691 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/themes/project_vii/style.css
+++ b/stable/themes/project_vii/style.css
@@ -632,7 +632,8 @@ td #admin_menu_anim {
         vertical-align : middle;
 }
 #SUB_MENU {
-        padding: 0 0 0 20px;
+        width:100%;
+        padding: 0 20px;
 }
 
 #SYS_MENU {
