fixed minor typo
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2694 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -161,7 +161,7 @@ bblink a:hover {
 
 .maintable {
         border: 1px solid #CCD7E0;
-        background-color: #FFFFFFF;
+        background-color: #FFFFFF;
         margin-top: 1px;
         margin-bottom: 1px;
 }
