--- a/stable/themes/water_drop/style.css
+++ b/stable/themes/water_drop/style.css
@@ -161,7 +161,7 @@ bblink a:hover {
 
 .maintable {
         border: 1px solid #CCD7E0;
-        background-color: #FFFFFFF;
+        background-color: #FFFFFF;
         margin-top: 1px;
         margin-bottom: 1px;
 }
