--- a/cpgNGDevel/templates/common/displayimage.html
+++ b/cpgNGDevel/templates/common/displayimage.html
@@ -87,7 +87,7 @@
   </tr>
 </table>
 
-
+{if $filmStrip}
 <table align="center" width="" cellspacing="1" cellpadding="0" class="maintable">
   <tr>
     <td valign="top" class="filmImg" align="center">&nbsp;</td>
@@ -108,7 +108,7 @@
     <td valign="top" class="filmImg" align="center">&nbsp;</td>
   </tr>
 </table>
-
+{/if}
 
 {if $votes}
 
