fixed parent cat drop down bug
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2835 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNGDevel/templates/common/catmgr.html
+++ b/cpgNGDevel/templates/common/catmgr.html
@@ -83,7 +83,7 @@
       <select name="parent" class="listbox">
         <option value="0" selected="true">{$lang_albmgr_php.no_category}</option>
       {foreach item=item key=key from=$categoryObj->catList}
-        <option value="{$item.cid}" {if $item.cid eq $categoryObj->currentCategory.cid}selected{/if}>{$item.name}</option>
+        <option value="{$item.cid}" {if $item.cid eq $categoryObj->currentCategory.parent}selected{/if}>{$item.name}</option>
       {/foreach}
       </select>
     </td>
