Fixing bblink css class
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2858 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/themes/classic/style.css
+++ b/stable/themes/classic/style.css
@@ -139,12 +139,12 @@ a:hover {
         text-decoration: underline;
 }
 
-bblink a {
+.bblink a {
         color: #0033CC;
         text-decoration: none;
 }
 
-bblink a:hover {
+.bblink a:hover {
         color: #0033CC;
         text-decoration: underline;
 }
