--- a/stable/themes/project_vii/style.css
+++ b/stable/themes/project_vii/style.css
@@ -210,12 +210,12 @@ a:hover {
         text-decoration: underline;
 }
 
-bblink a {
+.bblink a {
         color: #FF6600;
         text-decoration: none;
 }
 
-bblink a:hover {
+.bblink a:hover {
         color: #FF6600;
         text-decoration: underline;
 }
