--- a/stable/themes/rainy_day/style.css
+++ b/stable/themes/rainy_day/style.css
@@ -146,12 +146,12 @@ a:hover {
         text-decoration: underline;
 }
 
-bblink a {
+.bblink a {
         color: #0033CC;
         text-decoration: none;
 }
 
-bblink a:hover {
+.bblink a:hover {
         color: #0033CC;
         text-decoration: underline;
 }
