Changed smarty variable from 'fileNameName' to 'fileName' to display correct filename in batch add
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2903 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNGDevel/templates/common/batchadd.html
+++ b/cpgNGDevel/templates/common/batchadd.html
@@ -15,7 +15,7 @@
   {foreach item=item key=key from=$files}
   <tr>
     <td class="tableb" valign="middle" align="left">{$item.dirName}</td>
-    <td class="tableb" valign="middle" align="left">{$item.fileNameName}</td>
+    <td class="tableb" valign="middle" align="left">{$item.fileName}</td>
     <td class="tableb" valign="middle" align="left">{$item.albumName}</td>
     <td class="tableb" valign="middle" align="center"><img src="{$DOMAIN_URL}placeFile.php?index={$key}" /></td>
   </tr>
