Removed 'Restore factory defaults' functionality
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2934 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNGDevel/templates/common/admin.html
+++ b/cpgNGDevel/templates/common/admin.html
@@ -48,8 +48,7 @@
             &nbsp;<a href="javascript:expand();" class="admin_menu">{$lang_admin_php.expand_all}&nbsp;&nbsp;<img src="images/ascending.gif" width="9" height="9" border="0" alt="" title="{$lang_admin_php.expand_all}" /></a>
           </td>
           <td width="67%" align="center">
-            <input type="submit" class="button" name="update_config" value="{$lang_admin_php.save_cfg}" />&nbsp;&nbsp;
-            <input type="submit" class="button" name="restore_config" value="{$lang_admin_php.restore_cfg}" />
+            <input type="submit" class="button" name="update_config" value="{$lang_admin_php.save_cfg}" />
           </td>
         </tr>
       </table>
