Added code to display list of albums to which a particular group has special access
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2935 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNGDevel/templates/common/usermgr.html
+++ b/cpgNGDevel/templates/common/usermgr.html
@@ -111,6 +111,23 @@
 </table>
 {elseif $smarty.get.op eq "group_alb_access"}
 <!-- Display album level access to each group -->
+<table align="center" width="500" cellspacing="1" cellpadding="0" class="maintable">
+  <tr>
+    <td class="tableh1" colspan="3">{$lang_usermgr_php.group_can_access}</td>
+  </tr>
+  <tr>
+    <td><b>{$lang_usermgr_php.category}</b></td>
+    <td><b>{$lang_usermgr_php.album}</b></td>
+    <td><b>{$lang_usermgr_php.modify}</b></td>
+  </tr>
+ {foreach from=$albums item=item}
+  <tr>
+    <td>{$item.category}</td>
+    <td>{$item.album}</td>
+    <td>&nbsp;<a href="modifyalb.php?album={$item.aid}"><img src="images/edit.gif" border="0" alt="" /></a></td>
+  </tr>
+ {/foreach}
+</table>
 {else}
 <!-- Success/error messages if any-->
 {if $miscArr.success ne ""}
