Code added to wrap image description 'TD' element
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2936 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNGDevel/templates/common/displayimage.html
+++ b/cpgNGDevel/templates/common/displayimage.html
@@ -74,7 +74,7 @@
 <!-- BEGIN caption -->
         {if $picData.caption}
         <tr>
-          <td>
+          <td style="white-space: normal;">
             {$picData.caption}
           </td>
         </tr>
