added form definition to fix "funny" default behaviour of browsers that leads to unwanted gaps on the page
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2946 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/eyeball/style.css
+++ b/devel/themes/eyeball/style.css
@@ -158,7 +158,10 @@ li {
         list-style-type: disc;
 }
 
-
+form {
+        margin-top:0px;
+        margin-bottom:0px;
+}
 
 .top_panel td {
         white-space: nowrap;
