--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -94,6 +94,11 @@ li {
         list-style-type: disc;
 }
 
+form {
+        margin-top:0px;
+        margin-bottom:0px;
+}
+
 .textinput {
         font-family: "Trebuchet MS", Verdana, Geneva, Arial, sans-serif;
         font-size: 100%;
