--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -89,6 +89,11 @@ li {
         list-style-type: disc;
 }
 
+form {
+        margin-top:0px;
+        margin-bottom:0px;
+}
+
 .textinput {
         font-family: Verdana, Arial, Helvetica, sans-serif;
         font-size: 12px;
