--- a/devel/themes/mac_ox_x/style.css
+++ b/devel/themes/mac_ox_x/style.css
@@ -141,6 +141,11 @@ li {
         list-style-type: disc;
 }
 
+form {
+        margin-top:0px;
+        margin-bottom:0px;
+}
+
 .top_panel {
         background-image: url(images/top_panel_r1_c1b.gif);
         background-repeat: no-repeat;
