--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -91,6 +91,11 @@ li {
         list-style-type: disc;
 }
 
+form {
+        margin-top:0px;
+        margin-bottom:0px;
+}
+
 .top_panel td {
         white-space: nowrap;
 }
