--- a/devel/themes/classic/style.css
+++ b/devel/themes/classic/style.css
@@ -391,9 +391,10 @@ a:hover {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 85%;
         border: 1px solid #005D8C;
-        background-color:#EFEFEF;
-        background-image : url(images/button_bg.gif);
-        background-position : bottom;
+        background-color:#FFFFFF;
+        background-image: url(images/button_bg.gif);
+        background-position: bottom;
+        background-repeat:repeat-x;
         color: #000000;
         margin-top: 0px;
         margin-bottom: 0px;
