--- a/devel/include/index.html
+++ b/devel/include/index.html
@@ -10,8 +10,8 @@
   (at your option) any later version.
   ********************************************
   Coppermine version: 1.5.0
-  $Source$
+  $HeadURL$
   $Revision$
-  $Author$
+  $LastChangedBy$
   $Date$
 **********************************************/
