--- a/devel/themes/classic/style.css
+++ b/devel/themes/classic/style.css
@@ -12,7 +12,7 @@
   Coppermine version: 1.5.0
   $Source$
   $Revision$
-  $Author$
+  $LastChangedBy$
   $Date$
 **********************************************/
 
