Moved theme and language styling from hardcoded into stylesheet (inline class)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2991 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/eyeball/style.css
+++ b/devel/themes/eyeball/style.css
@@ -163,6 +163,10 @@ form {
         margin-bottom:0px;
 }
 
+.inline {
+        display:inline;
+}
+
 .top_panel td {
         white-space: nowrap;
 }
