--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -119,6 +119,10 @@ form {
         margin-bottom:0px;
 }
 
+.inline {
+        display:inline;
+}
+
 .textinput {
         font-family: Verdana, Arial, Helvetica, sans-serif;
         font-size: 100%;
