--- a/devel/themes/mac_ox_x/style.css
+++ b/devel/themes/mac_ox_x/style.css
@@ -146,6 +146,10 @@ form {
         margin-bottom:0px;
 }
 
+.inline {
+        display:inline;
+}
+
 .top_panel {
         background-image: url(images/top_panel_r1_c1b.gif);
         background-repeat: no-repeat;
