--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -96,6 +96,10 @@ form {
         margin-bottom:0px;
 }
 
+.inline {
+        display:inline;
+}
+
 .top_panel td {
         white-space: nowrap;
 }
