--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -143,7 +143,22 @@ form {
         vertical-align : middle;
 }
 
-a {
+a:link {
+        color: #FFA600;
+        text-decoration: none;
+}
+
+a:visited {
+        color: #FFA600;
+        text-decoration: none;
+}
+
+a:focus {
+        color: #FFA600;
+        text-decoration: none;
+}
+
+a:active {
         color: #FFA600;
         text-decoration: none;
 }
@@ -442,6 +457,42 @@ td #admin_menu_anim {
 }
 
 .image {
+        border-style: solid;
+        border-width:1px;
+        border-color: #000000;
+        margin: 2px;
+}
+
+/* pseudo-classes for image links */
+a:link .image{
+        border-style: solid;
+        border-width:1px;
+        border-color: #000000;
+        margin: 2px;
+}
+
+a:visited .image{
+        border-style: solid;
+        border-width:1px;
+        border-color: #FFA600;
+        margin: 2px;
+}
+
+a:focus .image{
+        border-style: solid;
+        border-width:1px;
+        border-color: #000000;
+        margin: 2px;
+}
+
+a:hover .image{
+        border-style: solid;
+        border-width:1px;
+        border-color: #6BBE10;
+        margin: 2px;
+}
+
+a:active .image{
         border-style: solid;
         border-width:1px;
         border-color: #000000;
