--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -466,6 +466,43 @@ td #admin_menu_anim {
         margin: 2px;
 }
 
+/* pseudo-classes for image links */
+a:link .image{
+        border-style: solid;
+        border-width:2px;
+        border-color: #394048;
+        margin: 2px;
+}
+
+a:visited .image{
+        border-style: solid;
+        border-width:2px;
+        border-color: #39414A;
+        margin: 2px;
+}
+
+a:focus .image{
+        border-style: solid;
+        border-width:2px;
+        border-color: #394048;
+        margin: 2px;
+}
+
+a:hover .image{
+        border-style: solid;
+        border-width:2px;
+        border-color: #4A5963;
+        margin: 2px;
+}
+
+a:active .image{
+        border-style: solid;
+        border-width:2px;
+        border-color: #394048;
+        margin: 2px;
+}
+
+
 .imageborder {
         border: 1px solid #000000;
         background-color: #5B5B5B;
