--- a/cpgNGDevel/templates/common/displayimage.html
+++ b/cpgNGDevel/templates/common/displayimage.html
@@ -1,6 +1,7 @@
 {if $commentResult}
 <div class="success">{$commentResult}</div>
 {/if}
+{$moreDescr}
 <!-- Start displayimage.html -->
 <table align="center" width="600" cellspacing="0" cellpadding="0" class="maintable">
 
