--- a/cpgNGDevel/templates/common/popup.html
+++ b/cpgNGDevel/templates/common/popup.html
@@ -3,7 +3,7 @@
 <head>
 <title>{$PAGE_TITLE}</title>
 <meta http-equiv="Content-Type" content="text/html; charset={$CHARSET}" />
-<link href="./templates/2bornot2b/style.css" type="text/css" rel="stylesheet" />
+<link href="{$DOMAIN_URL}templates/{$theme}/style.css" type="text/css" rel="stylesheet" />
 <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
