--- a/cpgNGDevel/templates/common/uploadAction.html
+++ b/cpgNGDevel/templates/common/uploadAction.html
@@ -20,7 +20,7 @@
       {if $file.error}
         {$file.error}
       {else}
-        <a href="{$DOMAIN_URL}placeFile.php?index={$key}"><img src="{$DOMAIN_URL}placeFile.php?index={$key}" alt="Click here for Details" border="0"></a>
+        <a href="{$DOMAIN_URL}placeFile.php?index={$key}&t={$time}"><img src="{$DOMAIN_URL}placeFile.php?index={$key}&t={$time}" alt="Click here for Details" border="0"></a>
       {/if}
     </td>
   </tr>
