--- a/cpgNGDevel/include/index.html
+++ b/cpgNGDevel/include/index.html
@@ -10,8 +10,8 @@
   (at your option) any later version.
   ********************************************
   Coppermine version: 1.4.1
-  $Source$
-  $Revision$
+  $Source: /home/cvs/cpgNGDevel/include/index.html,v $
+  $Revision: 1.1 $
   $Author$
   $Date$
 **********************************************/
