--- a/cpgNGDevel/templates/common/category.html
+++ b/cpgNGDevel/templates/common/category.html
@@ -2,7 +2,7 @@
 <!-- Category List Starts -->
 <table align="center" width="100%" cellspacing="0" cellpadding="0" class="maintable">
   <tr>
-    <td class="tableh1" width="80%"><b>{$lang_cat_list.category}</b></td>
+    <td class="tableh1" width="80%"><b>{$lang_cat_list.category}</b>{$moreDescr}</td>
     <td class="tableh1" width="10%" align="center"><b>{$lang_cat_list.albums}</b></td>
     <td class="tableh1" width="10%" align="center"><b>{$lang_cat_list.pictures}</b></td>
   </tr>
