added full path for css to avoide the path problem when using short urls
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3161 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNGDevel/templates/bluedot/main.html
+++ b/cpgNGDevel/templates/bluedot/main.html
@@ -7,7 +7,7 @@
 <link rel="start" href="index.php" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="search" href="search.php" />
-<link href="templates/{$theme}/style.css" type="text/css" rel="stylesheet" /> 
+<link href="{$DOMAIN_URL}templates/{$theme}/style.css" type="text/css" rel="stylesheet" /> 
 <script type="text/javascript" src="{$DOMAIN_URL}scripts.js"></script>
 </head>
 <body>
