--- a/cpgNGDevel/templates/tan/main.html
+++ b/cpgNGDevel/templates/tan/main.html
@@ -7,7 +7,7 @@
 <link rel="start" href="index.php" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="search" href="search.php" />
-<link href="templates/{$theme}/style.css" type="text/css" rel="stylesheet" /> 
+<link href="{$DOMAIN_URL}templates/{$theme}/style.css" type="text/css" rel="stylesheet" /> 
 <script type="text/javascript" src="{$DOMAIN_URL}scripts.js"></script>
 </head>
 <body>
