--- a/cpgNGDevel/templates/bluedot/style.css
+++ b/cpgNGDevel/templates/bluedot/style.css
@@ -325,6 +325,11 @@ td.filmImg {
   padding-bottom: 2px;
   padding-left: 5px;
 }
+
+.image {
+  border: 3px solid #FFFFFF;
+}
+
 /*
 .navmenu {
   font-family: Verdana, Arial, Helvetica, sans-serif;
