--- a/cpgNGDevel/templates/tan/main.html
+++ b/cpgNGDevel/templates/tan/main.html
@@ -125,6 +125,7 @@
 <li><a href="rss.php?{if $meta ne ''}meta={$meta}{/if}{if $smarty.get.album ne ''}&amp;album={$smarty.get.album}{/if}{if $smarty.get.cat ne ''}&amp;cat={$smarty.get.cat}{/if}{if $smarty.get.uid ne ''}&amp;uid={$smarty.get.uid}{/if}"><img src="{$DOMAIN_URL}images/rss.gif" border="0" align="middle" alt="RSS" title="RSS"></a></li>
 </ul></li>
 {/if}
+<li><ul><li>{$THEME_SELECT_LIST}</li></ul></li>
 </ul></div>
 </td>
 </tr>
