--- a/cpgNGDevel/templates/chocolate/main.html
+++ b/cpgNGDevel/templates/chocolate/main.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="{$DOMAIN_URL}scripts.js"></script>
 </head>
 <body>
+{$CUSTOM_HEADER}
 <table cellpadding="0" cellspacing="0" border="0">
 <tr>
 <td colspan="2">
@@ -53,6 +54,10 @@
 <!-- END leave_admin_mode -->
 {/if}
 </ul>
+
+{if $custom_lnk_name}
+ <ul><li><a href="{$custom_lnk_url}" title="{$custom_lnk_name}">{$custom_lnk_name}</a></li></ul>
+{/if}
 
 <ul>
   <li><a href="thumbnails.php?meta=lastup&amp;cat={$smarty.get.cat}&amp;album={$smarty.get.album}" title="{$lang_main_menu.lastup_title}">{$lang_main_menu.lastup_lnk}</a></li>
@@ -194,6 +199,7 @@
 <div class="footer" align="center" style="padding-top: 10px;">
 Powered by <a href="http://coppermine.sourceforge.net/" title="Coppermine Photo Gallery" rel="external">Coppermine Photo Gallery</a>
 </div>
+{$CUSTOM_FOOTER}
 <!-- Coppermine Photo Gallery Next Generation (alpha) //-->
 </body>
 </html>
